--- a/DesignerRHN/DesignerRHN-war/web/perreferencialaboral1.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/perreferencialaboral1.xhtml
@@ -12,7 +12,7 @@
             <ui:define name="body">                  
                 <h:form id="form">                    
                     <p:growl id="growl" showDetail="true"/> 
-                    <p:panel  id="PanelTotal" header="Referencias Familiares" style="  position: absolute; width: 874px; height: 530px; left: 300px; top: 100px;text-align: left" >  
+                    <p:panel  id="PanelTotal" header="Referencias Familiares" style="position: absolute; width: 874px; height: 510px; text-align: left">  
                         <h:outputText style="position: absolute; left: 580px; top: 50px; position: absolute; color: #BF1A1A; font-weight: bold; width: 285px; text-align: right; " id="nombreEmpleado" value="#{controlHvReferencias1.personaSeleccionada.primerapellido} #{controlHvReferencias1.personaSeleccionada.segundoapellido} #{controlHvReferencias1.personaSeleccionada.nombre}"/>
                         <fieldset style="position: absolute;top: 80px;left: 10px;height: 350px;width: 830px; border-radius: 10px; text-align: left">
                             <legend style="font-size: 14px; color: blue"><strong>Referencias Familiares</strong></legend>
@@ -112,7 +112,7 @@
 
                         </fieldset>
 
-                        <p:toolbar style=" position: absolute; top: 40px; left: 20px;">  
+                        <p:toolbar style=" position: absolute; top: 40px; left: 20px; height: 24px">  
                             <p:toolbarGroup align="left"> 
 
                                 <p:commandButton id="guardarRapido" value="" style="background-image: url(Imagenes/guardar.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px; " actionListener="#{controlHvReferencias1.guardarHvReferencia()}" process="@this" />
@@ -121,7 +121,7 @@
                                 <p:commandButton id="editar" value="" style="background-image: url(Imagenes/editar.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlHvReferencias1.editarCelda()}"  process="@this"/>
                                 <p:tooltip style="" for="editar" value="Editar" />
 
-                                <p:separator />
+                                <p:separator style="position: relative; top: -9px"/>
 
                                 <p:commandButton id="listaValores" value="" style="background-image: url(Imagenes/lupa.png); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlHvReferencias1.listaValoresBoton()}"   process="@this"/>
                                 <p:tooltip style="" for="listaValores" value="Lista de Valores" />
@@ -129,7 +129,7 @@
                                 <p:commandButton id="filtrar" value="" style="background-image: url(Imagenes/embudo.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlHvReferencias1.activarCtrlF11()}"  process="@this"/>
                                 <p:tooltip style="" for="filtrar" value="Activar filtrado" />
 
-                                <p:separator />
+                                <p:separator style="position: relative; top: -9px"/>
 
                                 <p:commandButton id="exportarXLS" value="" style="background-image: url(Imagenes/excel.png); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlHvReferencias1.exportXLS()}"  ajax="false"/>
                                 <p:tooltip style="" for="exportarXLS" value="Exportar a XLS" />
@@ -142,7 +142,7 @@
                                 <p:commandButton id="exportarPDF" value="" style="background-image: url(Imagenes/pdf.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlHvReferencias1.exportPDF()}" ajax="false"/>
                                 <p:tooltip style="" for="exportarPDF" value="Exportar a PDF" />
 
-                                <p:separator /> 
+                                <p:separator style="position: relative; top: -9px"/> 
                                 <p:commandButton id="insertar" value="" style="background-image: url(Imagenes/nuevoRegistro.jpg);  background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px "  oncomplete="nuevoRegistroHvReferencias.show()" update=":formularioDialogos:nuevooHvReferenciaLab" process="@this"/> 
                                 <p:tooltip style="" for="insertar" value="Nueva Referencia Familiar" />
 
@@ -151,7 +151,7 @@
 
                                 <p:commandButton id="duplicar" value="" style="background-image: url(Imagenes/duplicar.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlHvReferencias1.duplicandoHvEntrevistas()}" process="@this"/>  
                                 <p:tooltip style="" for="duplicar" value="Duplicar Referencia Familiar" />
-                                <p:separator /> 
+                                <p:separator style="position: relative; top: -9px"/> 
                                 <p:commandButton id="rastro" value="" style="background-image: url(Imagenes/rastro.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlHvReferencias1.verificarRastro()}" process="@this"/>  
                                 <p:tooltip style="" for="rastro" value="Rastro"/>
 
