--- a/DesignerRHN/DesignerRHN-war/web/clasepension.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/clasepension.xhtml
@@ -247,7 +247,7 @@
                         <center><strong><h:outputText id="informacionDuplicar" value="Duplicar Clase Pension" style="font-size: 14px; color: blue; position: relative; top: 10px" /></strong></center> 
 
                         <p:panel id="duplicarTE" style="border: none;">
-                            <strong><h:outputText value="*código: "  style=" position: absolute; top: 60px;" /></strong>
+                            <strong><h:outputText value="*Código: "  style=" position: absolute; top: 60px;" /></strong>
                             <p:inputText id="duplicarCodigo" value="#{controlClasesPensiones.duplicarClasesPensiones.codigo}" style=" width: 140px; position: absolute; left: 150px; top: 55px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
